// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div
  className="bg-light py-4"
>
  <div
    className="content-container py-2 w-100"
  >
    <div
      className="d-flex flex-sm-row flex-xl-column justify-content-between h-100"
    >
      <div
        className="col-auto py-xl-0 py-sm-1 h-100"
      >
        <div>
          <div
            className="d-sm-none d-xl-block"
          >
            <h2
              className="font-weight-light p-0 h-100"
            >
              Viewing 
              <span
                className="font-weight-bold"
              >
                1
              </span>
               
              expense
               totalling 
              <span
                className="font-weight-bold"
              >
                $255.00
              </span>
            </h2>
          </div>
          <div
            className="d-sm-flex d-xl-none flex-column"
          >
            <div>
              <span
                className="font-weight-bold h2"
              >
                1
              </span>
              <span
                className="h2"
              >
                 
                expense
                 
              </span>
            </div>
            <h1
              className="font-weight-bold pt-2"
            >
              $255.00
            </h1>
          </div>
        </div>
      </div>
      <div
        className="col-3 d-flex"
      >
        <Link
          className="btn btn-primary mt-sm-0 mt-xl-3 bigbutton w-100 h-100 px-0 d-flex justify-content-center align-content-center"
          to="/create"
        >
          <h2
            className="m-auto"
          >
            Add Expense
          </h2>
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesSummary correctly with mode expenses 1`] = `
<div
  className="bg-light py-4"
>
  <div
    className="content-container py-2 w-100"
  >
    <div
      className="d-flex flex-sm-row flex-xl-column justify-content-between h-100"
    >
      <div
        className="col-auto py-xl-0 py-sm-1 h-100"
      >
        <div>
          <div
            className="d-sm-none d-xl-block"
          >
            <h2
              className="font-weight-light p-0 h-100"
            >
              Viewing 
              <span
                className="font-weight-bold"
              >
                8
              </span>
               
              expenses
               totalling 
              <span
                className="font-weight-bold"
              >
                $25,546,848.00
              </span>
            </h2>
          </div>
          <div
            className="d-sm-flex d-xl-none flex-column"
          >
            <div>
              <span
                className="font-weight-bold h2"
              >
                8
              </span>
              <span
                className="h2"
              >
                 
                expenses
                 
              </span>
            </div>
            <h1
              className="font-weight-bold pt-2"
            >
              $25,546,848.00
            </h1>
          </div>
        </div>
      </div>
      <div
        className="col-3 d-flex"
      >
        <Link
          className="btn btn-primary mt-sm-0 mt-xl-3 bigbutton w-100 h-100 px-0 d-flex justify-content-center align-content-center"
          to="/create"
        >
          <h2
            className="m-auto"
          >
            Add Expense
          </h2>
        </Link>
      </div>
    </div>
  </div>
</div>
`;
